# tzap

./: .gitignore  .tzapignore  .tzapinclude  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  go.work  index.html  main.code-workspace
.devcontainer/: Dockerfile  Dockerfile.redis  devcontainer.json  docker-compose.yml
.github/workflows/: build-release-publish.yml  e2e-testing.yml  push-test.yml  release-build.yml  release.yml  test-e2e.yml
.tzap/: examples  usecases
cli/: Makefile  go.mod  go.sum  install.sh  main.go
cli/action/: chainofthoughtprompts.go  embed_app.go  projection.go  prompt.go  search.go
cli/actionpb/: prompt.pb.go  search.pb.go  tzap.pb.go  tzap_grpc.pb.go
cli/applications/: embed_app.go
cli/cmd/: clarify.go  colors.go  editdir.go  embeddingPrompt.go  embeddingprompt.go  find.go  generate.go  ghrelease.go  gitcommit.go  gitcommit2.go  init.go  init_test.go  install.go  magicWand.go  pca.go  prompt.go  prompts.go  refactor.go  reset.go  root.go  router.go  search.go  semanticgitcommit.go  template.go
cli/proto/: prompt.proto  search.proto  tzap.proto
docs/: CNAME  LICENSE  index.html  pca2.json  points.json  sh  style.css  vectors.html
e2e-examples/: Dockerfile  README.md  pyproject.toml
e2e-examples/tests/: test_utils.py
examples/: go.mod  go.sum
favicon/: index.mjs  package-lock.json  package.json
npm/: .npmignore  Makefile  install.js  package.json  run.js  test.js  wasm_exec.js
test-e2e/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
test-e2e/test_e2e/: utils.py
test-e2e/tests/: test_utils.py
(+293 files in other folders)
